added fetch api

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,5 @@
-@import "./globals/globals.scss";
+@import "./modules/globals";
+@import "./modules/app";
+
+@import "../components/styles/comicCard";
+@import "../components/styles/button";
