--- a/src/styles/modules/_globals.scss
+++ b/src/styles/modules/_globals.scss
@@ -5,6 +5,11 @@
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 16px;
     font-family: Ubuntu, sans-serif;
 }
