--- a/src/components/styles/_imageCard.scss
+++ b/src/components/styles/_imageCard.scss
@@ -12,8 +12,7 @@
         border: 1px solid red;
     }
     & img {
-        width: 180px;
-        height: 180px;
+        width: 100%;
         border: 1px solid red;
     }
     span {
