--- a/src/components/styles/_imageCard.scss
+++ b/src/components/styles/_imageCard.scss
@@ -1,24 +1,42 @@
 .card {
+    width: 65%;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    border-radius: 18px;
-    box-shadow: 0 0 15px 18px grey;
-    &__number {
+    border: none;
+    border-radius: 5px;
+    background: #ffffff;
+    box-shadow: 3px 7px 9px 5px #585858;
+    &__id {
         width: 100%;
         display: flex;
         justify-content: flex-start;
-        border: 1px solid red;
+        align-items: center;
+        font-weight: bold;
+        & span {
+            padding: 10px;
+            font-size: 1.3rem;
+        }
+    }
+    & h1 {
+        padding: 20px;
     }
     & img {
-        width: 100%;
-        border: 1px solid red;
+        width: 95%;
+        border-radius: 5px;
+        filter: drop-shadow(2px 4px 4px #585858);
+        transition: all 0.5s ease-in-out;
+        &:hover {
+            -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+        }
     }
-    span {
-        padding: 15px;
-    }
-    p {
-        padding: 15px;
+    &__rating {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
     }
 }
