--- a/src/styles/modules/_app.scss
+++ b/src/styles/modules/_app.scss
@@ -1,9 +1,8 @@
 .container {
     width: 50rem;
-    padding: 30px;
+    height: 56rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 2px 9px 5px #b2dced;
 }
