--- a/src/components/styles/_randomButton.scss
+++ b/src/components/styles/_randomButton.scss
@@ -5,11 +5,12 @@
         font-weight: bold;
         font-size: 1.1rem;
         border-radius: 20px;
+        border: none;
         background-color: dodgerblue;
         color: whitesmoke;
         cursor: pointer;
         &:hover {
-            background-color: powderblue;
+            background-color: palegreen;
             color: darkslategray;
             box-shadow: 0 2px 15px 6px powderblue;
         }
