--- a/src/components/styles/_imageCard.scss
+++ b/src/components/styles/_imageCard.scss
@@ -23,7 +23,7 @@
     & h1 {
         padding: 20px;
     }
-    & img {
+    &__image {
         width: 95%;
         border-radius: 5px;
         filter: drop-shadow(2px 4px 4px #585858);
@@ -38,5 +38,8 @@
         justify-content: center;
         align-items: center;
         padding: 5px;
+        &__startIcon {
+            width: 60px;
+        }
     }
 }
